Fixed problems with actionbar

--- a/app/src/main/res/layout-land/activity_main_screen.xml
+++ b/app/src/main/res/layout-land/activity_main_screen.xml
@@ -4,7 +4,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar"/>
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="177dp"
