--- a/app/src/main/res/layout/activity_log_into.xml
+++ b/app/src/main/res/layout/activity_log_into.xml
@@ -1,72 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-
 
 <RelativeLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="match_parent"
 android:layout_height="wrap_content">
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar"/>
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="58dp"
-        android:text="E-mail"
-        android:textColor="@color/colorText2"
-        android:textSize="30sp"
-        android:layout_alignParentTop="true"
-        android:layout_alignRight="@+id/textView3"
-        android:layout_alignEnd="@+id/textView3" />
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/toolbar">
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hasło"
-        android:textColor="@color/colorText2"
-        android:textSize="30sp"
-        android:layout_marginTop="44dp"
-        android:layout_below="@+id/editText2"
-        android:layout_centerHorizontal="true" />
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <EditText
-    android:id="@+id/editText2"
-    android:layout_width="256dp"
-    android:layout_height="45dp"
-        android:background="@drawable/edittextstyle"
-    android:inputType="textPersonName"
-        android:layout_marginTop="20dp"
-        android:layout_below="@+id/textView4"
-        android:layout_alignLeft="@+id/editText"
-        android:layout_alignStart="@+id/editText" />
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@+id/textView3"
+                android:layout_alignParentTop="true"
+                android:layout_alignRight="@+id/textView3"
+                android:layout_marginTop="58dp"
+                android:text="E-mail"
+                android:textColor="@color/colorText2"
+                android:textSize="30sp" />
 
-<EditText
-    android:id="@+id/editText"
-    android:layout_width="256dp"
-    android:layout_height="45dp"
-    android:background="@drawable/edittextstyle"
-    android:inputType="textPersonName"
-    android:layout_marginTop="16dp"
-    android:layout_below="@+id/textView3"
-    android:layout_centerHorizontal="true" />
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/editText2"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="44dp"
+                android:text="Hasło"
+                android:textColor="@color/colorText2"
+                android:textSize="30sp" />
+
+            <EditText
+                android:id="@+id/editText2"
+                android:layout_width="256dp"
+                android:layout_height="45dp"
+                android:layout_alignLeft="@+id/editText"
+                android:layout_alignStart="@+id/editText"
+                android:layout_below="@+id/textView4"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/edittextstyle"
+                android:inputType="textPersonName"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"/>
+
+            <EditText
+                android:id="@+id/editText"
+                android:layout_width="256dp"
+                android:layout_height="45dp"
+                android:layout_below="@+id/textView3"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/edittextstyle"
+                android:inputType="textPersonName"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"/>
 
 
-    <Button
-    android:id="@+id/Button"
-    android:layout_width="163dp"
-    android:layout_height="wrap_content"
-    android:background="@color/colorPrimary"
-    android:text="OK"
-    android:textColor="@color/colorText"
-    android:textSize="20sp"
-        android:layout_below="@+id/editText"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="65dp" />
+            <Button
+                android:id="@+id/Button"
+                android:layout_width="163dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/editText"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="65dp"
+                android:background="@color/colorPrimary"
+                android:text="OK"
+                android:textColor="@color/colorText"
+                android:textSize="20sp" />
+        </RelativeLayout>
+    </ScrollView>
+
 </RelativeLayout>
-</ScrollView>
