--- a/app/src/main/res/layout-land/activity_main_screen.xml
+++ b/app/src/main/res/layout-land/activity_main_screen.xml
@@ -7,14 +7,15 @@
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar"/>
+
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="177dp"
         android:layout_height="75dp"
-        android:layout_alignParentTop="true"
+        app:srcCompat="@drawable/logo"
+        android:layout_below="@+id/toolbar"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="14dp"
-        app:srcCompat="@drawable/logo" />
+        android:layout_marginTop="19dp" />
 
     <Button
         android:id="@+id/button5"
@@ -45,7 +46,7 @@
         android:layout_marginBottom="10dp" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/createLists"
         android:layout_width="198dp"
         android:layout_height="37dp"
         android:background="@color/colorPrimary"
@@ -63,7 +64,7 @@
         android:layout_height="wrap_content"
         android:text="lub"
         android:textAlignment="center"
-        android:layout_above="@+id/button2"
+        android:layout_above="@+id/createLists"
         android:layout_alignLeft="@+id/textView2"
         android:layout_alignStart="@+id/textView2"
         android:layout_marginBottom="15dp"
@@ -80,8 +81,8 @@
         android:textColor="@color/colorText"
         android:layout_marginBottom="11dp"
         android:layout_above="@+id/textView7"
-        android:layout_alignRight="@+id/button2"
-        android:layout_alignEnd="@+id/button2"
+        android:layout_alignRight="@+id/createLists"
+        android:layout_alignEnd="@+id/createLists"
         android:layout_marginRight="13dp"
         android:layout_marginEnd="13dp" />
 
