--- a/app/src/main/res/layout-land/activity_main_screen.xml
+++ b/app/src/main/res/layout-land/activity_main_screen.xml
@@ -49,14 +49,15 @@
         android:id="@+id/createLists"
         android:layout_width="198dp"
         android:layout_height="37dp"
-        android:background="@color/colorPrimary"
-        android:text="Twórz listy offline"
-        android:textColor="@color/colorText"
-        android:layout_marginRight="58dp"
-        android:layout_marginEnd="58dp"
         android:layout_alignBottom="@+id/button5"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_marginEnd="58dp"
+        android:layout_marginRight="58dp"
+        android:background="@color/colorPrimary"
+        android:onClick="Lists"
+        android:text="Twórz listy offline"
+        android:textColor="@color/colorText" />
 
     <TextView
         android:id="@+id/textView7"
