--- a/app/src/main/res/layout/burger_menu.xml
+++ b/app/src/main/res/layout/burger_menu.xml
@@ -2,6 +2,7 @@
 <android.support.design.widget.NavigationView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/nav_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:menu="@menu/navigation_menu"
