--- a/app/src/main/res/layout/activity_log_into.xml
+++ b/app/src/main/res/layout/activity_log_into.xml
@@ -49,8 +49,8 @@ android:layout_height="wrap_content">
                 android:id="@+id/editText2"
                 android:layout_width="256dp"
                 android:layout_height="45dp"
-                android:layout_alignLeft="@+id/editText"
-                android:layout_alignStart="@+id/editText"
+                android:layout_alignLeft="@+id/password"
+                android:layout_alignStart="@+id/password"
                 android:layout_below="@+id/textView4"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/edittextstyle"
@@ -59,23 +59,23 @@ android:layout_height="wrap_content">
                 android:paddingRight="5dp"/>
 
             <EditText
-                android:id="@+id/editText"
+                android:id="@+id/password"
                 android:layout_width="256dp"
                 android:layout_height="45dp"
                 android:layout_below="@+id/textView3"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="16dp"
                 android:background="@drawable/edittextstyle"
-                android:inputType="textPersonName"
+                android:inputType="textPassword"
                 android:paddingLeft="5dp"
-                android:paddingRight="5dp"/>
+                android:paddingRight="5dp" />
 
 
             <Button
                 android:id="@+id/Button"
                 android:layout_width="163dp"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/editText"
+                android:layout_below="@+id/password"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="65dp"
                 android:background="@color/colorPrimary"
