--- a/app/src/main/res/layout/activity_friends_list.xml
+++ b/app/src/main/res/layout/activity_friends_list.xml
@@ -5,7 +5,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.teamengineer.myengineer.ListsList">
+    tools:context="pl.pollub.android.shoppinglist.ListsList">
 
     <LinearLayout
         android:layout_width="match_parent"
