--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/drawer_layout"
-    tools:context="com.example.teamengineer.myengineer.Settings">
+    tools:context="pl.pollub.android.shoppinglist.Settings">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
