--- a/app/src/main/res/layout/activity_templates_list.xml
+++ b/app/src/main/res/layout/activity_templates_list.xml
@@ -5,7 +5,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="pl.pollub.android.shoppinglist.TemplatesList">
+    tools:context="pl.pollub.android.shoppinglist.activity.TemplatesList">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,7 +16,7 @@
             layout="@layout/toolbar" />
 
         <ListView
-            android:id="@+id/listview"
+            android:id="@+id/buddies_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/toolbar"
