--- a/app/src/main/res/layout/activity_templates.xml
+++ b/app/src/main/res/layout/activity_templates.xml
@@ -5,7 +5,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="pl.pollub.android.shoppinglist.activity.TemplatesList">
+    tools:context="pl.pollub.android.shoppinglist.activity.TemplatesActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,8 +15,8 @@
             android:id="@+id/toolbar"
             layout="@layout/toolbar" />
 
-        <ListView
-            android:id="@+id/buddies_recycler_view"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/templates_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/toolbar"
@@ -35,7 +35,7 @@
 
     </LinearLayout>
 
-    <include layout="@layout/burger_menu" />
+    <include layout="@layout/menu_burger" />
 
 
 </android.support.v4.widget.DrawerLayout>
