--- a/app/src/main/res/layout/item_buddy.xml
+++ b/app/src/main/res/layout/item_buddy.xml
@@ -9,29 +9,51 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="10dp">
+
+        <CheckBox
+            android:id="@+id/checkBox"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_margin="4dp"
+            android:button="@drawable/checkbox_selector"
+            android:checked="false" />
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="@{buddy.nickname}"
             android:textSize="22sp" />
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="@{buddy.name}"
             android:textSize="22sp" />
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="@{buddy.lastActiveAt.toString()}"
             android:textSize="22sp" />
 
     </LinearLayout>
+
+    <!--<ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="10dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/linearLayout"
+        android:background="@android:color/transparent"
+        android:cropToPadding="false"
+        app:srcCompat="@android:drawable/ic_menu_more" />-->
 
 </layout>
