--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,7 +30,7 @@ android:layout_height="wrap_content">
                 android:layout_alignParentTop="true"
                 android:layout_alignRight="@+id/textView3"
                 android:layout_marginTop="58dp"
-                android:text="E-mail"
+                android:text="Login"
                 android:textColor="@color/colorText2"
                 android:textSize="30sp" />
 
@@ -38,7 +38,7 @@ android:layout_height="wrap_content">
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/editText2"
+                android:layout_below="@+id/login_login"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="44dp"
                 android:text="Hasło"
@@ -46,11 +46,11 @@ android:layout_height="wrap_content">
                 android:textSize="30sp" />
 
             <EditText
-                android:id="@+id/editText2"
+                android:id="@+id/login_login"
                 android:layout_width="256dp"
                 android:layout_height="45dp"
-                android:layout_alignLeft="@+id/password"
-                android:layout_alignStart="@+id/password"
+                android:layout_alignLeft="@+id/login_password"
+                android:layout_alignStart="@+id/login_password"
                 android:layout_below="@+id/textView4"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/edittextstyle"
@@ -59,7 +59,7 @@ android:layout_height="wrap_content">
                 android:paddingRight="5dp"/>
 
             <EditText
-                android:id="@+id/password"
+                android:id="@+id/login_password"
                 android:layout_width="256dp"
                 android:layout_height="45dp"
                 android:layout_below="@+id/textView3"
@@ -72,10 +72,10 @@ android:layout_height="wrap_content">
 
 
             <Button
-                android:id="@+id/Button"
+                android:id="@+id/login_button"
                 android:layout_width="163dp"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/password"
+                android:layout_below="@+id/login_password"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="65dp"
                 android:background="@color/colorPrimary"
