--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -34,14 +34,14 @@
                     android:text="E-mail"
                     android:textColor="@color/colorText2"
                     android:textSize="30sp"
-                    app:layout_constraintBottom_toTopOf="@+id/editText6"
+                    app:layout_constraintBottom_toTopOf="@+id/register_email"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="1.0" />
 
                 <EditText
-                    android:id="@+id/editText6"
+                    android:id="@+id/register_email"
                     android:layout_width="256dp"
                     android:layout_height="45dp"
                     android:layout_marginBottom="15dp"
@@ -66,15 +66,15 @@
                     android:layout_marginLeft="8dp"
                     android:layout_marginRight="8dp"
                     android:layout_marginStart="8dp"
-                    android:text="Pseudonim"
+                    android:text="Login"
                     android:textColor="@color/colorText2"
                     android:textSize="30sp"
-                    app:layout_constraintBottom_toTopOf="@+id/editText9"
+                    app:layout_constraintBottom_toTopOf="@+id/register_login"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent" />
 
                 <EditText
-                    android:id="@+id/editText9"
+                    android:id="@+id/register_login"
                     android:layout_width="256dp"
                     android:layout_height="45dp"
                     android:layout_marginBottom="8dp"
@@ -102,12 +102,12 @@
                     android:text="Hasło"
                     android:textColor="@color/colorText2"
                     android:textSize="30sp"
-                    app:layout_constraintBottom_toTopOf="@+id/password"
+                    app:layout_constraintBottom_toTopOf="@+id/login_password"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent" />
 
                 <EditText
-                    android:id="@+id/password"
+                    android:id="@+id/login_password"
                     android:layout_width="256dp"
                     android:layout_height="45dp"
                     android:layout_marginBottom="16dp"
@@ -135,13 +135,13 @@
                     android:text="Powtórz hasło"
                     android:textColor="@color/colorText2"
                     android:textSize="30sp"
-                    app:layout_constraintBottom_toTopOf="@+id/repeat_password"
+                    app:layout_constraintBottom_toTopOf="@+id/register_repeat_password"
                     app:layout_constraintHorizontal_bias="0.502"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent" />
 
                 <EditText
-                    android:id="@+id/repeat_password"
+                    android:id="@+id/register_repeat_password"
                     android:layout_width="256dp"
                     android:layout_height="45dp"
                     android:layout_marginBottom="17dp"
@@ -153,12 +153,12 @@
                     android:inputType="textPassword"
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp"
-                    app:layout_constraintBottom_toTopOf="@+id/button4"
+                    app:layout_constraintBottom_toTopOf="@+id/register_button"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent" />
 
                 <Button
-                    android:id="@+id/button4"
+                    android:id="@+id/register_button"
                     android:layout_width="163dp"
                     android:layout_height="48dp"
                     android:layout_marginBottom="31dp"
@@ -167,7 +167,7 @@
                     android:layout_marginRight="8dp"
                     android:layout_marginStart="8dp"
                     android:background="@color/colorPrimary"
-                    android:text="OK"
+                    android:text="Zarejestruj"
                     android:textColor="@color/colorText"
                     android:textSize="20sp"
                     app:layout_constraintBottom_toBottomOf="parent"
