--- a/app/src/main/res/layout/activity_buddies.xml
+++ b/app/src/main/res/layout/activity_buddies.xml
@@ -2,13 +2,6 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <data>
-        <variable name="buddiesViewModel"
-            type="pl.pollub.shoppinglist.viewmodel.BuddiesViewModel"/>
-        <variable name="view"
-            type="pl.pollub.shoppinglist.activity.BuddiesActivity"/>
-    </data>
-
     <android.support.v4.widget.DrawerLayout
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
@@ -28,11 +21,12 @@
                 android:scrollbars="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1"
-                app:items="@{buddiesViewModel.getModel}"
+                android:layout_weight="1" />
+                <!--app:items="@{buddiesViewModel.getModel}"
                 app:itemViewBinder="@{buddiesViewModel.itemViewBinder}"
                 app:clickHandler="@{view.clickHandler}"
-                app:longClickHandler="@{view.longClickHandler}" />
+                app:longClickHandler="@{view.longClickHandler}" -->
+
 
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/floatingActionButton"
