--- a/app/src/main/res/layout/activity_shopping_lists.xml
+++ b/app/src/main/res/layout/activity_shopping_lists.xml
@@ -15,12 +15,11 @@
                 android:id="@+id/toolbar"
                 layout="@layout/toolbar" />
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/lists_recycler_view"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_below="@+id/toolbar"
-                android:layout_weight="1" />
+            <ListView
+                android:id="@+id/list"
+                android:layout_width="wrap_content"
+                android:layout_height="443dp" >
+            </ListView>
 
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/addListButton"
