--- a/app/src/main/res/layout/lists_items_item.xml
+++ b/app/src/main/res/layout/lists_items_item.xml
@@ -23,13 +23,14 @@
             android:checked="false" />
 
         <ImageView
+            android:id="@+id/itemImage"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginLeft="20dp"
             android:minWidth="40dp" />
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/itemName"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="0.45"
