--- a/app/src/main/res/layout/activity_add_shopping_list.xml
+++ b/app/src/main/res/layout/activity_add_shopping_list.xml
@@ -29,8 +29,7 @@
                 android:gravity="center_horizontal"
                 android:text="Nazwa listy" />
 
-            <TextView
-                style="@style/Base.V12.Widget.AppCompat.EditText"
+            <Button
                 android:id="@+id/listDeadline"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
