--- a/app/src/main/res/layout/activity_custom_products_list.xml
+++ b/app/src/main/res/layout/activity_custom_products_list.xml
@@ -1,44 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-xmlns:android="http://schemas.android.com/apk/res/android"
-android:id="@+id/drawer_layout"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context="pl.pollub.shoppinglist.activity.CustomProductsListActivity">
-
-<LinearLayout
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/custom_products_list_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:weightSum="1">
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/toolbar" />
+    tools:context="pl.pollub.shoppinglist.activity.CustomProductsListActivity">
 
-    <ListView
-        android:id="@+id/custom_products_list_view"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="393dp"
-        android:layout_below="@+id/toolbar"
-        android:layout_weight="0.88" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:weightSum="1">
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/custom_products_goto_creator"
-        android:layout_width="59dp"
-        android:layout_height="50dp"
-        android:layout_gravity="right"
-        android:layout_margin="10dp"
-        android:layout_weight="0.29"
-        android:clickable="true"
-        android:onClick="goToCustomProductCreation"
-        app:backgroundTint="@color/colorPrimary"
-        app:fabSize="mini"
-        app:srcCompat="@android:drawable/ic_menu_add" />
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/toolbar" />
 
-</LinearLayout>
+        <ListView
+            android:id="@+id/custom_products_list_view"
+            android:layout_width="match_parent"
+            android:layout_height="393dp"
+            android:layout_below="@+id/toolbar"
+            android:layout_weight="0.88" />
 
-<include layout="@layout/menu_burger" />
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/custom_products_goto_creator"
+            android:layout_width="59dp"
+            android:layout_height="50dp"
+            android:layout_gravity="right"
+            android:layout_margin="10dp"
+            android:layout_weight="0.29"
+            android:clickable="true"
+            android:onClick="goToCustomProductCreation"
+            app:backgroundTint="@color/colorPrimary"
+            app:fabSize="mini"
+            app:srcCompat="@android:drawable/ic_menu_add" />
+
+    </LinearLayout>
+
+    <include layout="@layout/menu_burger" />
 
 
 </android.support.v4.widget.DrawerLayout>
