--- a/app/src/main/res/layout/activity_custom_product_appender.xml
+++ b/app/src/main/res/layout/activity_custom_product_appender.xml
@@ -2,6 +2,7 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:ls="http://schemas.android.com/apk/res-auto"
     android:id="@+id/custom_products_appender_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,6 +11,7 @@
     tools:layout_editor_absoluteY="25dp">
 
     <LinearLayout
+        android:id="@+id/custom_products_appender_form_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -20,130 +22,72 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-
-        <ImageView
-            android:id="@+id/custom_products_appender_image_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:scaleType="centerInside"
-            app:srcCompat="@drawable/custom_products_banner" />
-
-
-        <TableLayout
-            android:id="@+id/custom_products_form_table_layout"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_margin="10dp">
 
-            <TableRow
-                android:id="@+id/custom_products_name_row"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/custom_products_name_label"
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/custom_products_name_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginTop="8dp">
+
+                    <EditText
+                        android:id="@+id/custom_products_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_column="1"
+                        android:ems="10"
+                        android:hint="@string/customProductName"
+                        android:inputType="textPersonName"
+                        tools:layout_editor_absoluteY="61dp" />
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/custom_products_description_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginTop="8dp">
+
+                    <EditText
+                        android:id="@+id/custom_products_description"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_column="1"
+                        android:ems="10"
+                        android:hint="@string/customProductDescription"
+                        android:inputType="textMultiLine"
+                        tools:layout_editor_absoluteY="168dp" />
+
+                </android.support.design.widget.TextInputLayout>
+
+                <com.satsuware.usefulviews.LabelledSpinner
+                    android:id="@+id/custom_products_category"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_column="0"
-                    android:text="Nazwa" />
-
-                <EditText
-                    android:id="@+id/custom_products_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_column="1"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginTop="8dp"
                     android:ems="10"
                     android:inputType="textPersonName"
-                    tools:layout_editor_absoluteY="61dp" />
+                    ls:labelText="@string/customProductCategory" />
 
-            </TableRow>
+            </LinearLayout>
+        </ScrollView>
 
-            <TableRow
-                android:id="@+id/custom_products_category_row"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:id="@+id/custom_products_category_label"
-                    android:layout_width="79dp"
-                    android:layout_height="19dp"
-                    android:layout_column="0"
-                    android:text="Kategoria" />
-
-                <EditText
-                    android:id="@+id/custom_products_category"
-                    android:layout_width="375dp"
-                    android:layout_height="42dp"
-                    android:layout_column="1"
-                    android:ems="10"
-                    android:inputType="textPersonName" />
-
-            </TableRow>
-
-            <TableRow
-                android:id="@+id/custom_products_description_row"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:id="@+id/custom_products_description_label"
-                    android:layout_width="99dp"
-                    android:layout_height="wrap_content"
-                    android:text="Opis" />
-
-                <EditText
-                    android:id="@+id/custom_products_description"
-                    android:layout_width="349dp"
-                    android:layout_height="wrap_content"
-                    android:layout_column="1"
-                    android:ems="10"
-                    android:inputType="textMultiLine"
-                    tools:layout_editor_absoluteY="168dp" />
-
-            </TableRow>
-
-            <TableRow
-                android:id="@+id/custom_products_measure_row"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:id="@+id/custom_products_measure_label"
-                    android:layout_width="108dp"
-                    android:layout_height="19dp"
-                    android:layout_column="0"
-                    android:text="Jednostka miary" />
-
-                <AutoCompleteTextView
-                    android:id="@+id/custom_products_measure_autocomplete"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-            </TableRow>
-
-            <TableRow
-                android:id="@+id/custom_products_price_per_unit_row"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:id="@+id/custom_products_price_per_unit_label"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Cena za jednostkę" />
-
-                <EditText
-                    android:id="@+id/custom_products_price_per_unit"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:inputType="numberDecimal" />
-            </TableRow>
-
-        </TableLayout>
 
     </LinearLayout>
+
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -161,29 +105,31 @@
             <Button
                 android:id="@+id/custom_products_reset_button"
                 style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:background="@android:drawable/ic_menu_close_clear_cancel"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:background="@drawable/rounded_button"
                 android:backgroundTint="@android:color/holo_red_dark"
-                android:onClick="resetFormValues" />
+                android:onClick="resetFormValues"
+                android:layout_marginRight="4dp"
+                android:layout_weight=".5"
+                android:text="@string/clear" />
 
             <Button
                 android:id="@+id/custom_products_add_button"
                 style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="wrap_content"
-                android:layout_gravity="center_vertical"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:layout_weight="1"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="4dp"
+                android:layout_weight=".5"
                 android:background="@drawable/rounded_button"
                 android:backgroundTint="@color/colorPrimaryDark"
-                android:onClick="storeCustomProduct"
-                android:text=" Dodaj produkt"
-                android:textSize="18sp" />
+                android:onClick="submitCustomProduct"
+                android:text="@string/save" />
 
         </LinearLayout>
     </RelativeLayout>
-
 
     <include layout="@layout/menu_burger" />
 
