Deleting online lists and products. Offline in development. Need to be fixed.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="colorText">#ffffff</color>
     <color name="colorText2">#000000</color>
     <color name="red">#FF0000</color>
+    <color name="SelectedColor">#857c7c</color>
+    <color name="DefaultColor">#ffffff</color>
 </resources>
