created adding templates changed layout of adding product deleted AddTemplate.java

--- a/app/src/main/res/layout/activity_templates.xml
+++ b/app/src/main/res/layout/activity_templates.xml
@@ -11,16 +11,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
         <include
             android:id="@+id/toolbar"
             layout="@layout/toolbar" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/templates_recycler_view"
+        <ListView
+            android:id="@+id/list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/toolbar"
-            android:layout_weight="1" />
+            android:layout_height="443dp">
+            android:layout_height="754dp"></ListView>
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/addListButton"
