--- a/app/src/main/res/layout/activity_add_product_to_list.xml
+++ b/app/src/main/res/layout/activity_add_product_to_list.xml
@@ -7,166 +7,158 @@
 
     <include
         android:id="@+id/toolbar"
-        layout="@layout/toolbar"/>
+        layout="@layout/toolbar" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/toolbar">
+        android:layout_below="@+id/toolbar"
+        android:layout_margin="10dp">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="500dp">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <TableLayout
-                android:id="@+id/custom_products_form_table_layout"
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp">
+                android:layout_height="match_parent"
+                android:layout_marginBottom="8dp"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="8dp">
 
-                <TableRow
-                    android:id="@+id/custom_products_name_row"
+                <EditText
+                    android:id="@+id/product_name"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="wrap_content"
+                    android:layout_column="1"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:hint="Nazwa"
+                    android:inputType="textPersonName"
+                    tools:layout_editor_absoluteY="61dp" />
+            </android.support.design.widget.TextInputLayout>
 
-                    <TextView
-                        android:id="@+id/custom_products_name_label"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_column="0"
-                        android:text="Nazwa" />
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="8dp"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="8dp">
 
-                    <EditText
-                        android:id="@+id/product_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_column="1"
-                        android:ems="10"
-                        android:inputType="textPersonName"
-                        tools:layout_editor_absoluteY="61dp" />
-
-                </TableRow>
-
-                <TableRow
-                    android:id="@+id/products_name_row"
+                <EditText
+                    android:id="@+id/product_amount"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="wrap_content"
+                    android:layout_column="1"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:hint="Ilość"
+                    android:inputType="number"
+                    tools:layout_editor_absoluteY="61dp" />
+            </android.support.design.widget.TextInputLayout>
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_column="0"
-                        android:text="Ilość" />
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="8dp"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="8dp">
 
-                    <EditText
-                        android:id="@+id/product_amount"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_column="1"
-                        android:ems="10"
-                        android:inputType="number"
-                        tools:layout_editor_absoluteY="61dp" />
-
-                </TableRow>
-
-                <TableRow
-                    android:id="@+id/custom_products_category_row"
+                <Spinner
+                    android:id="@+id/product_categories_spinner"
+                    style="@style/Widget.AppCompat.Button"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="42dp"
+                    android:layout_column="1"
+                    android:layout_weight="1"
+                    android:ems="10" />
+            </android.support.design.widget.TextInputLayout>
 
-                    <TextView
-                        android:id="@+id/custom_products_category_label"
-                        android:layout_width="79dp"
-                        android:layout_height="19dp"
-                        android:layout_column="0"
-                        android:text="Kategoria" />
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="8dp"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="8dp">
 
-                    <Spinner
-                        android:id="@+id/product_categories_spinner"
-                        style="@style/Widget.AppCompat.Button"
-                        android:layout_width="375dp"
-                        android:layout_height="42dp"
-                        android:layout_column="1"
-                        android:ems="10" />
-
-                </TableRow>
-
-                <TableRow
-                    android:id="@+id/custom_products_description_row"
+                <EditText
+                    android:id="@+id/product_description"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="wrap_content"
+                    android:layout_column="1"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:hint="Opis"
+                    android:inputType="textMultiLine"
+                    tools:layout_editor_absoluteY="168dp" />
+            </android.support.design.widget.TextInputLayout>
 
-                    <TextView
-                        android:id="@+id/custom_products_description_label"
-                        android:layout_width="99dp"
-                        android:layout_height="wrap_content"
-                        android:text="Opis" />
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="8dp"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="8dp">
 
-                    <EditText
-                        android:id="@+id/product_description"
-                        android:layout_width="349dp"
-                        android:layout_height="wrap_content"
-                        android:layout_column="1"
-                        android:ems="10"
-                        android:inputType="textMultiLine"
-                        tools:layout_editor_absoluteY="168dp" />
-
-                </TableRow>
-
-                <TableRow
-                    android:id="@+id/custom_products_measure_row"
+                <Spinner
+                    android:id="@+id/product_measure_spinner"
+                    style="@style/Widget.AppCompat.Button"
                     android:layout_width="match_parent"
-                    android:layout_height="51dp">
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+            </android.support.design.widget.TextInputLayout>
 
-                    <TextView
-                        android:id="@+id/custom_products_measure_label"
-                        android:layout_width="108dp"
-                        android:layout_height="19dp"
-                        android:layout_column="0"
-                        android:text="Jednostka miary" />
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="8dp"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="8dp"
+                android:hint="Ikona">
 
-                    <Spinner
-                        android:id="@+id/product_measure_spinner"
-                        style="@style/Widget.AppCompat.Button"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
-
-                </TableRow>
-
-                <TableRow
-                    android:id="@+id/custom_products_price_per_unit_row"
+                <Button
+                    android:id="@+id/product_icon"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:inputType="numberDecimal"
+                    android:text="Ikona" />
+            </android.support.design.widget.TextInputLayout>
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Ikonka" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:id="@+id/custom_products_buttons_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_margin="10dp"
+                    android:orientation="horizontal"
+                    android:visibility="visible">
 
                     <Button
-                        android:id="@+id/product_icon"
-                        android:layout_width="match_parent"
+                        android:id="@+id/saveProductButton"
+                        style="@style/Widget.AppCompat.Button.Colored"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:ems="10"
-                        android:inputType="numberDecimal"
-                        android:text="+" />
-                </TableRow>
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="4dp"
+                        android:layout_weight=".5"
+                        android:background="@drawable/rounded_button"
+                        android:backgroundTint="@color/colorPrimaryDark"
+                        android:onClick="submitCustomProduct"
+                        android:text="@string/save" />
 
-            </TableLayout>
+                </LinearLayout>
+            </RelativeLayout>
 
-            <Button
-                android:id="@+id/saveProductButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/custom_products_form_table_layout"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="58dp"
-                android:text="Zapisz produkt" />
-        </RelativeLayout>
-
+        </LinearLayout>
 
     </ScrollView>
+
 
 </RelativeLayout>
