--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,4 +9,14 @@
         <item name="windowActionModeOverlay">true</item>
     </style>
 
+    <style name="TextLabel" parent="TextAppearance.AppCompat">
+        <!-- Hint color and label color in FALSE state -->
+        <item name="android:textColorHint">@color/DefaultColor</item>
+        <item name="android:textSize">20sp</item>
+        <!-- Label color in TRUE state and bar color FALSE and TRUE State -->
+        <item name="colorAccent">@color/ActiveText</item>
+        <item name="colorControlNormal">@color/DefaultColor</item>
+        <item name="colorControlActivated">@color/ActiveText</item>
+    </style>
+
 </resources>
