--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,88 +1,141 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
-xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="match_parent"
-android:layout_height="wrap_content">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimary">
+
     <include
         android:id="@+id/toolbar"
-        layout="@layout/toolbar"/>
+        layout="@layout/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/toolbar">
+        android:layout_below="@+id/toolbar"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp">
 
-        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView4"
+            <ImageView
+                android:id="@+id/imageView2"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignEnd="@+id/textView3"
+                android:layout_height="200px"
+                android:adjustViewBounds="false"
+                android:cropToPadding="false"
+                app:srcCompat="@drawable/ls_banner" />
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/login_login_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_alignParentTop="true"
-                android:layout_alignRight="@+id/textView3"
-                android:layout_marginTop="58dp"
-                android:text="Login"
-                android:textColor="@color/colorText2"
-                android:textSize="30sp" />
-
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/login_login"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="44dp"
-                android:text="Hasło"
-                android:textColor="@color/colorText2"
-                android:textSize="30sp" />
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:theme="@style/TextLabel">
 
-            <EditText
-                android:id="@+id/login_login"
-                android:layout_width="256dp"
-                android:layout_height="45dp"
-                android:layout_alignLeft="@+id/login_password"
-                android:layout_alignStart="@+id/login_password"
-                android:layout_below="@+id/textView4"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/edittextstyle"
-                android:inputType="textPersonName"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"/>
+                <EditText
+                    android:id="@+id/login_login"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Login"
+                    android:inputType="textPersonName"
+                    android:textColor="@color/DefaultColor"
+                    android:textColorLink="@color/DefaultColor" />
 
-            <EditText
-                android:id="@+id/login_password"
-                android:layout_width="256dp"
-                android:layout_height="45dp"
-                android:layout_below="@+id/textView3"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="16dp"
-                android:background="@drawable/edittextstyle"
-                android:inputType="textPassword"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp" />
+            </android.support.design.widget.TextInputLayout>
 
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/login_password_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerVertical="true"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:theme="@style/TextLabel">
+
+                <EditText
+                    android:id="@+id/login_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignStart="@+id/login_login"
+                    android:hint="Hasło"
+                    android:inputType="textPassword"
+                    android:textColor="@color/DefaultColor"
+                    android:textColorLink="@color/DefaultColor" />
+
+            </android.support.design.widget.TextInputLayout>
 
             <Button
                 android:id="@+id/login_button"
-                android:layout_width="163dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/login_password"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="65dp"
-                android:background="@color/colorPrimary"
-                android:text="OK"
+                android:layout_alignParentBottom="true"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/rounded_button"
+
+                android:backgroundTint="@color/colorPrimaryDark"
+                android:text="Zaloguj się"
                 android:textColor="@color/colorText"
                 android:textSize="20sp" />
-        </RelativeLayout>
+
+            <LinearLayout
+                android:id="@+id/mainscreen_register_linear_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_margin="15dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginVertical="10dp"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:text="Nie masz konta?"
+                    android:textAlignment="viewEnd"
+                    android:textColor="@color/DefaultColor"
+                    android:textSize="16sp"
+                    android:visibility="visible"
+                    tools:layout_editor_absoluteX="8sp"
+                    tools:layout_editor_absoluteY="838sp" />
+
+                <Button
+                    android:id="@+id/button3"
+                    style="?android:attr/borderlessButtonStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="48sp"
+                    android:layout_weight="1"
+                    android:backgroundTint="@android:color/transparent"
+                    android:elegantTextHeight="false"
+                    android:onClick="register"
+                    android:text="Zarejestruj się!"
+                    android:textAlignment="textStart"
+                    android:textColor="@android:color/holo_blue_bright"
+                    android:textSize="14sp"
+                    android:visibility="visible"
+                    tools:layout_editor_absoluteX="374sp"
+                    tools:layout_editor_absoluteY="826sp" />
+            </LinearLayout>
+
+
+        </LinearLayout>
+
     </ScrollView>
+
 
 </RelativeLayout>
